--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mgt-react",
-  "version": "1.3.0-preview.1",
+  "version": "1.3.0-preview.2",
   "description": "Microsoft Graph Toolkit React wrapper class",
   "author": "metulev",
   "license": "MIT",
@@ -43,7 +43,7 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@microsoft/mgt": "file:../microsoft-graph-toolkit",
+    "@microsoft/mgt": "^1.3.0-preview.2",
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "wc-react": "^0.3.0"
